fixed layout issues with card and card logic, need to hide card view when form is selected

--- a/src/style.css
+++ b/src/style.css
@@ -107,6 +107,10 @@ html, body {
     border: solid 0.5px orange;
 }
 
+.card-list-todo {
+    height: 12.5%;
+}
+
 .todo-open {
     display: block;
     height: 40%;
